Updated thuli_core_features. Updated thuli_theme to fix admin menu z-index issue, added support for Bootstrap form controls, tabs and buttons.

--- a/web/sites/all/themes/thuli_theme/css/components/misc.css
+++ b/web/sites/all/themes/thuli_theme/css/components/misc.css
@@ -293,41 +293,41 @@ a.tabs-secondary__tab-link {
 .is-active.tabs-primary__tab {
   border-bottom-color: white;
 }
-a.tabs-primary__tab-link,
-a.tabs-primary__tab-link.is-active {
-  -moz-border-radius-topleft: 4px;
-  -webkit-border-top-left-radius: 4px;
-  border-top-left-radius: 4px;
-  -moz-border-radius-topright: 4px;
-  -webkit-border-top-right-radius: 4px;
-  border-top-right-radius: 4px;
-  -webkit-transition: background-color 0.3s;
-  -moz-transition: background-color 0.3s;
-  -o-transition: background-color 0.3s;
-  transition: background-color 0.3s;
-  color: #333;
-  background-color: #dedede;
-  letter-spacing: 1px;
-  padding: 0 1em;
-  text-align: center;
-}
+/*a.tabs-primary__tab-link,*/
+/*a.tabs-primary__tab-link.is-active {*/
+  /*-moz-border-radius-topleft: 4px;*/
+  /*-webkit-border-top-left-radius: 4px;*/
+  /*border-top-left-radius: 4px;*/
+  /*-moz-border-radius-topright: 4px;*/
+  /*-webkit-border-top-right-radius: 4px;*/
+  /*border-top-right-radius: 4px;*/
+  /*-webkit-transition: background-color 0.3s;*/
+  /*-moz-transition: background-color 0.3s;*/
+  /*-o-transition: background-color 0.3s;*/
+  /*transition: background-color 0.3s;*/
+  /*color: #333;*/
+  /*background-color: #dedede;*/
+  /*letter-spacing: 1px;*/
+  /*padding: 0 1em;*/
+  /*text-align: center;*/
+/*}*/
 a.tabs-primary__tab-link:hover,
 a.tabs-primary__tab-link:focus {
   background-color: #e9e9e9;
   border-color: #f2f2f2;
 }
-a.tabs-primary__tab-link:active,
-a.tabs-primary__tab-link.is-active {
-  background-color: transparent;
-  *zoom: 1;
-  filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#FFE9E9E9', endColorstr='#00E9E9E9');
-  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #e9e9e9), color-stop(100%, rgba(233, 233, 233, 0)));
-  background-image: -webkit-linear-gradient(#e9e9e9, rgba(233, 233, 233, 0));
-  background-image: -moz-linear-gradient(#e9e9e9, rgba(233, 233, 233, 0));
-  background-image: -o-linear-gradient(#e9e9e9, rgba(233, 233, 233, 0));
-  background-image: linear-gradient(#e9e9e9, rgba(233, 233, 233, 0));
-  border-color: #fff;
-}
+/*a.tabs-primary__tab-link:active,*/
+/*a.tabs-primary__tab-link.is-active {*/
+  /*background-color: transparent;*/
+  /**zoom: 1;*/
+  /*filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#FFE9E9E9', endColorstr='#00E9E9E9');*/
+  /*background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #e9e9e9), color-stop(100%, rgba(233, 233, 233, 0)));*/
+  /*background-image: -webkit-linear-gradient(#e9e9e9, rgba(233, 233, 233, 0));*/
+  /*background-image: -moz-linear-gradient(#e9e9e9, rgba(233, 233, 233, 0));*/
+  /*background-image: -o-linear-gradient(#e9e9e9, rgba(233, 233, 233, 0));*/
+  /*background-image: linear-gradient(#e9e9e9, rgba(233, 233, 233, 0));*/
+  /*border-color: #fff;*/
+/*}*/
 
 /* Secondary tabs. */
 .tabs-secondary {
